--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,9 +2,12 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "baseUrl": "./",
     "module": "es2015",
-    "types": []
+    "baseUrl": "",
+    "types": [
+      "jquery",
+      "ej.web.all"
+    ]
   },
   "exclude": [
     "test.ts",
