--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "ej-angular2": "^16.1.37",
+    "mongoose": "^5.1.1",
     "rxjs": "^5.5.6",
     "syncfusion-javascript": "^16.1.37",
     "zone.js": "^0.8.19"
