--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "body-parser": "^1.18.3",
     "core-js": "^2.4.1",
     "ej-angular2": "^16.1.37",
+    "express": "^4.16.3",
     "mongoose": "^5.1.1",
     "rxjs": "^5.5.6",
     "syncfusion-javascript": "^16.1.37",
