--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.11",
+    "@angular/cdk": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
@@ -25,6 +27,7 @@
     "core-js": "^2.4.1",
     "ej-angular2": "^16.1.37",
     "express": "^4.16.3",
+    "hammerjs": "^2.0.8",
     "mongoose": "^5.1.1",
     "rxjs": "^5.5.6",
     "syncfusion-javascript": "^16.1.37",
